@@ -7,6 +7,7 @@
     options.jQuery = {
       '$': $
     };
+    options._ua = 'Algolia for jQuery ' + window.ALGOLIA_VERSION;
     return new AlgoliaSearch(applicationID, apiKey, options);
   };
 
